--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,7 @@ analytics:
 author:
   name             : "Miguel Suau"
   avatar           : "profile.jpg"
-  bio              : "PhD candidate at TU Delft. 
-  JP Morgan AI Research."
+  bio              : "PhD candidate at TU Delft.\nJP Morgan AI Research."
   location         : "London, UK"
   employer         :
   pubmed           : 
