--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Miguel Suau"
+  name             : "Dr. Miguel Suau"
   avatar           : "profile.jpg"
-  bio              : "PhD candidate at TU Delft.\nJP Morgan AI Research."
-  location         : "London, UK"
+  bio              : "Research Scientist at Phaidra."
+  location         : "Mallorca, Spain"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=y2xDas0AAAAJ&hl=en"
