--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Dr. Miguel Suau"
+  name             : "Miguel Suau, Ph.D."
   avatar           : "profile.jpg"
   bio              : "Research Scientist at Phaidra."
   location         : "Mallorca, Spain"
